# auto-add-route

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
src/: main.rs  store.rs
