[package]
name = "auto-add-route"
version = "0.2.0"
edition = "2021"
authors = ["Hao Guan <raptium@gmail.com>"]
repository = "https://github.com/raptium/auto-add-route"

[dependencies]
pcap = "0.9.2"
etherparse = "0.10.1"
trust-dns-proto = "0.21.2"
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "3.2.12", features = ["derive"] }
sqlite = "0.26.0"